fix(combat): fix buff alignment for enemies

--- a/src/app/pages/tradeskills/peripheral/combat/combat-display/combat-display.component.scss
+++ b/src/app/pages/tradeskills/peripheral/combat/combat-display/combat-display.component.scss
@@ -31,6 +31,9 @@
       }
 
       .effects {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         margin-top: 10px;
         text-align: center;
         min-height: 30px;
